--- a/styles/styles.css
+++ b/styles/styles.css
@@ -323,7 +323,7 @@ section {
 .about-stats .progress-bars .progress-bar .progress-con .progress .MySql {
   width: 75%;
 }
-.about-stats .progress-bars .progress-bar .progress-con .progress .Python {
+.about-stats .progress-bars .progress-bar .progress-con .progress .python {
   width: 15%;
 }
 
